<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upcomingDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.UpcomingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/launchCardView"
            style="@style/RocketCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/centerDivider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/crsImageView"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="21dp"
                    android:contentDescription="@string/rocket_cover_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/crs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/launchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:fontFamily="@font/product_sans_medium"
                    android:text="@string/launch_text"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/info_heading_text_size"
                    app:layout_constraintBottom_toTopOf="@id/rocketNameTextView"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <TextView
                    android:id="@+id/rocketNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="Starlink 2"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/modelNumberTextView"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toBottomOf="@id/launchTextView" />

                <TextView
                    android:id="@+id/modelNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CCAES SLC 40"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/launchDateTextView"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toBottomOf="@id/rocketNameTextView" />

                <TextView
                    android:id="@+id/launchDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="16-10-2016"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toBottomOf="@id/modelNumberTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="53dp"
            android:fontFamily="@font/product_sans_medium"
            android:text="@string/launch_date_text"
            android:textColor="@color/pink"
            android:textSize="@dimen/info_heading_text_size"
            app:layout_constraintTop_toBottomOf="@id/launchCardView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="11dp"
            android:text="Thu Oct 17 5:30:00 2019"
            android:textSize="@dimen/upcoming_info_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/product_sans_medium"
            android:text="@string/launch_site_text"
            android:textColor="@color/pink"
            android:textSize="@dimen/info_heading_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="11dp"
            android:text="Cape Canaveral Air Force Station Space Launch Complex 40"
            android:textSize="@dimen/upcoming_info_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/product_sans_medium"
            android:text="@string/count_down_text"
            android:textColor="@color/pink"
            android:textSize="@dimen/info_heading_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginVertical="11dp"
            android:text="5 Hrs 30mins more..."
            android:textSize="@dimen/upcoming_info_text_size" />
    </LinearLayout>
</ScrollView>