<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_shape"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upcomingTextView"
                style="@style/TabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:text="@string/upcoming_tab"
                android:textColor="@color/pink"
                app:layout_constraintEnd_toStartOf="@id/launchesTextView"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/launchesTextView"
                style="@style/TabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launches_tab"
                app:layout_constraintEnd_toStartOf="@id/rocketsTextView"
                app:layout_constraintStart_toEndOf="@id/upcomingTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rocketsTextView"
                style="@style/TabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/rockets_tab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/launchesTextView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/detailsDivider"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/launchesTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/launchCardView"
            style="@style/RocketCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsDivider">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/centerDivider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/crsImageView"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginStart="25dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/crs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/launchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_medium"
                    android:text="LAUNCH"
                    android:textColor="@color/pink"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toTopOf="@id/rocketNameTextView"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/rocketNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="Starlink 2"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/modelNumberTextView"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toBottomOf="@id/launchTextView" />

                <TextView
                    android:id="@+id/modelNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CCAES SLC 40"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/launchDateTextView"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toBottomOf="@id/rocketNameTextView" />

                <TextView
                    android:id="@+id/launchDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="16-10-2016"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/centerDivider"
                    app:layout_constraintTop_toBottomOf="@id/modelNumberTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/upcomingDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="28dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/launchCardView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_medium"
                android:text="LAUNCH DATE"
                android:textColor="@color/pink"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Thu Oct 17 5:30:00 2019"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_medium"
                android:text="LAUNCH SITE"
                android:textColor="@color/pink"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Cape Canaveral Air Force Station Space Launch Complex 40"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_medium"
                android:text="COUNT DOWN"
                android:textColor="@color/pink"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="5 Hrs 30mins more..."
                android:textSize="16sp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rocketLaunchesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsDivider"
            tools:listitem="@layout/launch_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rocketsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsDivider"
            tools:listitem="@layout/rocket_view" />
    </LinearLayout>
</LinearLayout>